# videoGameS2

./: .gitignore  CMakeLists.txt  Makefile  README.md
niveau0/: Makefile  main.c  sdl2-light.c  sdl2-light.h  spacecorridor
niveau0/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  main_8c.html  main_8c__incl.dot  menudata.js  sdl2-light_8c.html  sdl2-light_8h.html  sdl2-light_8h_source.html  structtextures__s-members.html  structtextures__s.html  structworld__s-members.html  structworld__s.html
niveau0/latex/: files.tex  main_8c.tex  main_8c__incl.dot  refman.out  refman.tex  refman.toc  sdl2-light_8c.tex  sdl2-light_8h.tex  structtextures__s.tex  structworld__s.tex
projet/: #Makefile#  Makefile  Makefile perso  Makefile_win  README.md  game_data.c  game_data.h  game_event.c  game_event.h  graphic.c  graphic.h  handle_event.c  handle_event.h  leaderboard.c  leaderboard.h  leaderboard.txt  log.c  log_games.txt  main.c  main.h  menu_data.c  menu_data.h  menu_graphic.c  menu_graphic.h  param.h  sdl2-light.c  sdl2-light.h  sdl2-ttf-light.c  spacecorridor  tests.c
projet/html/: classes.html  files.html  globals_func.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  menudata.js  param_8h.html  param_8h_source.html  sdl2-light_8c.html  sdl2-light_8c__incl.dot  sdl2-light_8c__incl.map  sdl2-light_8c__incl.md5  (+11 more)
src/: game_data.h  graphic.c  handle_event.h  leaderboard.c  main.c  menu_data.c  sdl2-light.h  sdl2-ttf-light.c  sdl2-ttf-light.h  tests.c.txt
(+77 files in other folders)
